syntax = "proto3";

package ingestion;
option go_package = "./pb";

import "google/protobuf/timestamp.proto";

service IngestionService {
  rpc IngestFile(stream FileIngestRequest) returns (FileSummaryResponse);
}

message FileIngestRequest {
  // Complet path (ex: E:\Photos\holidays.jpg)
  string path = 1;
  // ex: Disk UUID
  string drive_id = 2;

  // System metadata (from syscalls)
  int64 size = 3;
  // Bit mask Windows
  uint32 attributes = 4;

  // Local intelligence (Sniffing)
  string mime_type = 5;
  // First 512 bytes
  bytes magic_bytes = 6;

  // Context
  google.protobuf.Timestamp scanned_at = 7;
  SourceType source_type = 8;
}

enum SourceType {
  SOURCE_TYPE_UNSPECIFIED = 0;
  SOURCE_TYPE_LOCAL_FIXED = 1;  // SSD/HDD Interne
  SOURCE_TYPE_REMOVABLE = 2;    // USB / Carte SD
  SOURCE_TYPE_NETWORK = 3;      // NAS / SMB
}

message FileSummaryResponse {
  int64 files_received = 1;
  int64 bytes_processed = 2;
  google.protobuf.Timestamp duration = 3;
}